--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="/js/mobile-menu.js"></script>
+  <script src="/js/react/react.js"></script>
+  <script src="/js/react/JSXTransformer.js"></script>
+  <script type="text/jsx" src="/js/users-table.js"></script>
 
 </head>
 <body>
@@ -100,6 +103,7 @@
   <div id="user-content"> <!-- start user content -->
 
   </div> <!-- end user content -->
+
 </div> <!-- end content -->
 
 
