--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="/js/mobile-menu.js"></script>
-  <script src="/js/react/react.js"></script>
+  <script src="/js/react/react-with-addons.js"></script>
   <script src="/js/react/JSXTransformer.js"></script>
 
 
@@ -100,7 +100,7 @@
     </div>
   </div> <!-- end header-main -->
 
-  <div id="user-content"> <!-- start user content -->
+  <div id="user-content" class="container"> <!-- start user content -->
       <script type="text/jsx" src="/js/users-table.js"></script>
   </div> <!-- end user content -->
 
