--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <div id="content">
   
-  <div id="mobile-menu" class="visible-when-small">
+  <div id="mobile-menu" class="visible-when-small"> <!-- start mobile drawer -->
     <ul>
       <li><a href="https://www.distelli.com/features">Features</a></li>
       <li><a href="https://www.distelli.com/pricing">Pricing</a></li>
@@ -61,7 +61,7 @@
       <li><a href="/login">Sign in</a></li>
       <li><a class="sign-up" href="/signup">Sign up</a></li>
     </ul>
-  </div>
+  </div> <!-- end mobile drawer -->
 
   <div id="header-main" class="blue-bg-1"> <!-- start header-main -->
 
@@ -95,7 +95,6 @@
       </div>
         <h1 class="clearfix">Welcome to the user admin page.</h1>
         <h2>Here you will find easily tabulated information about our customers.</h2>
-        <h2>Feel free to browse or edit their records.</h2>
       </div>
     </div>
   </div> <!-- end header-main -->
@@ -110,7 +109,7 @@
 
 </body> <!-- end body -->
 
-<footer>
+<footer> <!-- start footer -->
 <div id="footer" class="no-bottom-border section dark-bg-1">
   <div class="container90">
     <div class="third floatLeft">
